WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60016
[GTK] WidgetGtk setFocus can not access directly the widget in WK2
https://bugs.webkit.org/show_bug.cgi?id=60016
Summary
[GTK] WidgetGtk setFocus can not access directly the widget in WK2
Alejandro G. Castro
Reported
2011-05-03 02:34:35 PDT
We are grabbing directly the focus using the widget and this only works for Webkit1.
Attachments
Proposed patch
(1.79 KB, patch)
2011-05-03 02:42 PDT
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2011-05-03 02:42:26 PDT
Created
attachment 92056
[details]
Proposed patch
Martin Robinson
Comment 2
2011-05-03 10:29:09 PDT
Comment on
attachment 92056
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92056&action=review
Great stuff.
> Source/WebCore/platform/gtk/WidgetGtk.cpp:69 > + Frame* frame = Frame::frameForWidget(this); > + if (frame) {
This can just be: if (Frame* frame = Frame::frameForWidget(this)) { or an early return.
> Source/WebCore/platform/gtk/WidgetGtk.cpp:71 > + Page* page = frame->page(); > + page->chrome()->focus();
Also should just be frame->page()->chrome()->focus();
Alejandro G. Castro
Comment 3
2011-05-09 08:39:38 PDT
Thanks for the comments, landed:
http://trac.webkit.org/changeset/86058
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug